fix: membership_management.jsp